Update profile name for user
